# parallel_computing

first_lab/: CMakeLists.txt  csv_functions.h  custom_benchmark.h  custom_omp.h  main.cpp
fourth_lab/: CMakeLists.txt  main.cpp  vector_mod.cpp
second_lab/: CMakeLists.txt  csv_functions.h  main.cpp
third_lab/: CMakeLists.txt  main.cpp
